app/assets/stylesheets/custom.css.scss
@import "bootstrap";
@import "custom-responsive";

$grayMediumDark: #434343;
$grayMediumLight: #eaeaea;
$grayVeryLight: #eeeeee;

@mixin box_sizing {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

@mixin box_shadows {
  -moz-box-shadow: 5px 5px 25px 5px #111;
  -webkit-box-shadow: 5px 5px 25px 5px #111;
  box-shadow: 5px 5px 25px 5px #111;
}

/* universal */

html {
	overflow-y: scroll;
}

body {
	padding-top: 0px;
  background-color: #333 !important;
  font-family: verdana, arial, helvetica, sans-serif;
  // .container {
  //   width: auto;
  //   max-width: 940px !important;
  // }
}

@media (max-width: 979px) {
  body { padding-top: 0 }
}

.navbar-inner { 
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
  
}

.hero-unit {
  padding: 40px;
  @include box_shadows;
}

section {
	overflow: auto;
}

textarea {
	resize: vertical;
}

.center {
	text-align: center;
	h1 {
		margin-bottom: 10px;
	}
}

.btn:visited {
  color: $grayMediumDark !important;
}

.btn-success:visited, .btn-primary:visited, .btn-warning:visited, .btn-danger:visited {
  color: $grayVeryLight !important;
}



/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em !important;
  letter-spacing: -3px !important;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.2em;
  letter-spacing: 0px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: $grayLight;
}

p {
  font-size: 0.8em;
  line-height: 1.5em;
}


/* header */

#logo {
 	float: left;
  margin-right: 10px;
  font-size: 1.5em;
  text-transform: uppercase;
  letter-spacing: -2px;
  padding-top: 9px;
  font-weight: bold;
  line-height: 1;
  &:hover {
		color: white;
		text-decoration: none;
	}
}


/* footer */

footer {
  margin-top: 25px;
  font-size: 14px;
  padding-top: 5px;
  border-top: 1px solid $gray;
  color: $grayLight;
  a {
  	color: $gray;
  	&:hover {
  		color: $grayDarker;
		}
	}
	small {
	  float: left;
	  font-size: 0.9em;
	  padding-left: 10px;
	}
	nav {
		padding-right: 10px;
		table {
		  float: right;
		  tr td {
			  font-family: "Courier New", monospace;
			  font-size: 0.9em;
			  padding-left: 25px;
			  font-weight: bold;
			}
		}
	}
}

@media 
only screen and (max-width: 767px), (min-device-width: 768px) and (max-device-width: 1024px) {
  footer nav {
    padding-right: 0;
    table {
      float: left;
      tr td { font-size: 0.7em; font-weight: normal; }
    }
  }
}


/* forms */

input, textarea, select, .uneditable-input {
  width: 100% !important;
  padding: 10px;
  @include box_sizing;
}

input[type="submit"].btn {
  width: auto !important;
}

input {
  height: auto !important;
}

textarea {
  height: 200px !important;
  margin-bottom: 20px !important;
}

#error_explanation {
  color: #f00;
  ul {
    list-style: none;
    margin: 0 0 18px 0;
  }
}

.field_with_errors {
  @extend .control-group;
  @extend .error;
}


/* tables */

table tr td.right-column {
  text-align: right;
}

/* fix for a bug in bootstrap 2.3.2 */

.dropdown-backdrop { position: static; }


/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

